# cforces

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
cforces/: __init__.py  client.py  utils.py
cforces/enums/: __init__.py  contest_phase.py  contest_type.py  participant_type.py  problem_result_type.py  problem_type.py  rank.py  testset.py  verdict.py
cforces/errors/: __init__.py  api.py  base.py
cforces/methods/: __init__.py  blog_entry.py  contest.py  problemset.py  recent_actions.py  user.py
cforces/types/: __init__.py  object.py
cforces/types/blog/: __init__.py  blog_entry.py  comment.py  recent_action.py
cforces/types/contest/: __init__.py  contest.py  ranklist_row.py  rating_change.py  standings.py
cforces/types/problem/: __init__.py  hack.py  problem.py  problem_result.py  problem_statistics.py  submission.py
cforces/types/user/: __init__.py  member.py  party.py  user.py
docs/source/: conf.py  index.rst
docs/source/enums/: contest_phase.rst  contest_type.rst  index.rst  participant_type.rst  problem_result_type.rst  problem_type.rst  rank.rst  testset.rst  verdict.rst
docs/source/errors/: index.rst
docs/source/examples/: user_friends.py  user_info.py
docs/source/methods/: blog_entry.rst  contest.rst  index.rst  problemset.rst  recent_actions.rst  user.rst
docs/source/types/: blog.rst  contest.rst  index.rst  object.rst  problem.rst  user.rst
tests/: conftest.py  fetch_testdata.py  test_contest_methods.py  test_exceptions.py
tests/objects/: test_objects.py
