[project]
name = "cforces"
version = "0.1"

authors = [
	{ name="Boris Martinez", email="x93bd0@gmail.com" }
]

description="A Codeforces API wrapper"
readme = "README.md"
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
	"aiohttp"
]

[project.urls]
Homepage = "https://github.com/x93bd0/cforces"
Issues = "https://github.com/x93bd0/cforces/issues"
